# Mycelium

./: .clang-format  .gitignore  .gitmodules  Base64.h  Biome.h  BiomeStorage.h  BitStorage.h  BlockState.h  BlockStorage.h  ByteBuffer.h  CMakeLists.txt  Chunk.h  ChunkSection.h  DER.h  Difficulty.h  Dimension.h  Encryption.h  EntityMetadata.h  Gamemode.h  HTTP.h  HexDigest.h  Item.h  JSON.h  Keepalive.h  LICENSE  MojangAPI.h  NBT.h  Palette.h  Particle.h  README.md  Server.h  Slot.h  cert.pem  check_license.py  copy_resources.py  license_header.txt  main.cpp  properties.yml  random.h  registry_codec.nbt
.github/workflows/: cmake.yml  debug.yml  release.yml  stable.yml
Documentation/: building.md  plugin-mushroom.md
Source/Runtime/Core/: NBT.cpp  NBT.h  NBTIO.cpp  NBTIO.h  byte_buffer.cpp  byte_buffer.h  connection_context.cpp  connection_context.h  daft_hash.cpp  daft_hash.h  encryption.cpp  encryption.h  event_loop.cpp  event_loop_factory.cpp  event_loop_factory.h  handler.cpp  handler.h  location.cpp  location.h  main.cpp  pipeline.cpp  registry_codec.cpp  registry_codec.h  server.cpp  server.h  time.cpp  time.h
Source/Tools/: run_all.py
Source/Tools/block-generator/: block_generator.py
Source/Tools/dump-data/: dump_data.py
Source/Tools/item-generator/: item_generator.py
bedrock/: Server.h
bedrock/packet/: AbstractPacket.h  Packet.h
packet/: AbstractPacket.h  Packet.h  PacketInChatMessage.h  PacketInClickWindow.h  PacketInClientSettings.h  PacketInEncryptionResponse.h  PacketInEntityAction.h  PacketInHandshake.h  PacketInKeepalive.h  PacketInLoginStart.h  PacketInPing.h  PacketInPlayerBlockPlacement.h  PacketInPlayerPosition.h  PacketInPlayerPositionAndRotation.h  PacketInPlayerRotation.h  PacketOutBlockChange.h  PacketOutChatMessage.h  PacketOutChunk.h  PacketOutDestroyEntities.h  PacketOutDifficulty.h  PacketOutEncryptionRequest.h  PacketOutEntityHeadLook.h  PacketOutEntityMetadata.h  PacketOutEntityPosition.h  PacketOutEntityPostionAndRotation.h  PacketOutEntityRotation.h  PacketOutFace.h  PacketOutHeldItemChange.h  PacketOutInitializeWorldBorder.h  PacketOutJoinGame.h  PacketOutKeepalive.h  PacketOutLoginDisconnect.h  PacketOutLoginSuccess.h  PacketOutPlayerAbilities.h  PacketOutPlayerInfo.h  PacketOutPluginMessage.h  PacketOutPong.h  PacketOutPositionAndLook.h  PacketOutSpawnPlayer.h  PacketOutSpawnPosition.h  (+3 more)
server/: Server.h
src/: ByteBuffer.cpp  ByteBuffer.h  NBT.cpp  NBT.h  byte_buffer.cpp  byte_buffer.h  client.cpp  client.h  connection_context.cpp  connection_context.h  daft_hash.cpp  daft_hash.h  encryption.cpp  encryption.h  event_loop.cpp  event_loop.h  event_loop_factory.cpp  event_loop_factory.h  handler.cpp  handler.h  main.cpp  pipeline.cpp  pipeline.h  registry_codec.cpp  registry_codec.h  server.cpp  server.h  time.cpp  time.h  uuid.h
src/gsl/: gsl  gsl_algorithm  gsl_assert  gsl_byte  gsl_util  multi_span  pointers  span  string_span
src/listeners/: login_packet_listener.cpp  login_packet_listener.h  play_packet_listener.cpp  play_packet_listener.h  status_packet_listener.cpp  status_packet_listener.h
src/math/: vec3.inl
src/mojangapi/: auth_request.cpp  auth_request.h  http.cpp  http.h
src/pipeline/: handlers.h  packet_compressor.cpp  packet_decoder.cpp  packet_decompressor.cpp  packet_decrypt.cpp  packet_encoder.cpp  packet_encrypt.cpp  packet_handler.cpp  packet_prepender.cpp  packet_splitter.cpp
src/protocol/: clientbound_ack_block_change.cpp  clientbound_ack_block_change.h  clientbound_block_update.cpp  clientbound_block_update.h  clientbound_change_difficulty.cpp  clientbound_change_difficulty.h  clientbound_chunk_data.cpp  clientbound_chunk_data.h  clientbound_commands.cpp  clientbound_commands.h  clientbound_disconnect.cpp  clientbound_disconnect.h  clientbound_encryption_request.cpp  clientbound_encryption_request.h  clientbound_entity_animation.cpp  clientbound_entity_animation.h  clientbound_initialize_world_border.cpp  clientbound_initialize_world_border.h  clientbound_keepalive.cpp  clientbound_keepalive.h  clientbound_login.cpp  clientbound_login.h  clientbound_login_disconnect.cpp  clientbound_login_disconnect.h  clientbound_login_success.cpp  clientbound_login_success.h  clientbound_ping_response.cpp  clientbound_ping_response.h  clientbound_player_abilities.cpp  clientbound_player_abilities.h  clientbound_player_info.cpp  clientbound_player_info.h  clientbound_plugin_message.cpp  clientbound_plugin_message.h  clientbound_remove_entities.cpp  clientbound_remove_entities.h  clientbound_set_center_chunk.cpp  clientbound_set_center_chunk.h  clientbound_set_compression.cpp  clientbound_set_compression.h  (+79 more)
src/server/: chat_type.h  client_settings.h  difficulty.h  dimension.cpp  dimension.h  direction.h  entity.h  face.cpp  face.h  game_server.cpp  game_server.h  gamemode.h  gamerules.h  itemstack.cpp  itemstack.h  location.cpp  location.h  player_data.h  slot.h
src/server/block/: acacia_button_block.cpp  acacia_button_block.h  acacia_door_block.cpp  acacia_door_block.h  acacia_fence_block.cpp  acacia_fence_block.h  acacia_fence_gate_block.cpp  acacia_fence_gate_block.h  acacia_leaves_block.cpp  air_block.cpp  (+1886 more)
tools/: run_all.py
tools/block-generator/: block_generator.py  main.py
tools/dump-data/: dump_data.py
tools/item-generator/: item_generator.py
(+12549 files in other folders)
